# Copyright (c) 2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//drivers/external_device_manager/extdevmgr.gni")

ohos_shared_library("notification_peripheral") {
  sources = [
    "notification_locale.cpp",
    "notification_peripheral.cpp",
  ]
  include_dirs = [
    "${ext_mgr_path}/services/native/driver_extension_manager/include/device_notification",
    "${ext_mgr_path}/services/native/driver_extension_manager/include",
  ]
  configs = [ "${utils_path}:utils_config" ]

  external_deps = [
    "ability_base:zuri",
    "cJSON:cjson",
    "c_utils:utils",
    "distributed_notification_service:ans_innerkits",
    "hilog:libhilog",
    "i18n:intl_util",
    "image_framework:image_native",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
  ]
  cflags_cc = [
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
  ]
  install_enable = true
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
