# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("//drivers/external_device_manager/extdevmgr.gni")

config("driver_permission_public_config") {
  include_dirs = [ "../../include/driver_permission" ]
}

ohos_shared_library("driver_permission_manager") {
  sources = [ "ext_permission_manager.cpp" ]
  include_dirs = [ "${utils_path}/include/" ]
  configs = [
    ":driver_permission_public_config",
    "${utils_path}:coverage_flags",
    "${utils_path}:utils_config",
  ]
  public_configs = [ ":driver_permission_public_config" ]
  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "access_token:libtokenid_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utilsbase",
    "hilog:libhilog",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "samgr:samgr_proxy",
  ]
  install_enable = true
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
