# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("../../../../../extdevmgr.gni")

config("drvext_manager_public_config") {
  include_dirs = [ "../../include/bus_extension/usb" ]
}

ohos_shared_library("drivers_pkg_manager") {
  install_enable = true
  sources = [
    "driver_info.cpp",
    "driver_pkg_manager.cpp",
    "drv_bundle_state_callback.cpp",
    "pkg_database.cpp",
    "pkg_db_helper.cpp",
  ]
  include_dirs = [
    "../../include/drivers_pkg_manager",
    "../../include/bus_extension/core",
  ]
  configs = [
    ":drvext_manager_public_config",
    "${utils_path}:utils_config",
  ]
  public_configs = [ ":drvext_manager_public_config" ]

  # Component internal dependencies
  deps = [
    "${ext_mgr_path}/services/native/driver_extension_manager/src/bus_extension/core:driver_extension_bus_core",
    "//third_party/cJSON:cjson",
  ]

  external_deps = [
    "ability_base:want",
    "access_token:libaccesstoken_sdk",
    "bundle_framework:appexecfwk_base",
    "bundle_framework:appexecfwk_core",
    "c_utils:utils",
    "common_event_service:cesfwk_core",
    "common_event_service:cesfwk_innerkits",
    "drivers_interface_usb:libusb_proxy_1.0",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "hitrace:hitrace_meter",
    "init:libbegetutil",
    "ipc:ipc_core",
    "os_account:os_account_innerkits",
    "relational_store:native_appdatafwk",
    "relational_store:native_dataability",
    "relational_store:native_rdb",
    "samgr:samgr_proxy",
  ]
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
