# Copyright (c) 2023-2025 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
import("../../../../../../extdevmgr.gni")
ohos_shared_library("driver_extension_usb_bus") {
  sources = [
    "usb_bus_extension.cpp",
    "usb_dev_subscriber.cpp",
    "usb_driver_change_callback.cpp",
    "usb_driver_info.cpp",
  ]
  include_dirs = [
    "${ext_mgr_path}/frameworks/ddk/usb",
    "${ext_mgr_path}/interfaces/ddk/usb",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/bus_extension/usb",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/bus_extension/core",
    "${ext_mgr_path}/services/native/driver_extension_manager/include/drivers_hisysevent",
  ]
  configs = [
    "${utils_path}:coverage_flags",
    "${utils_path}:utils_config",
  ]
  deps = [
    "${ext_mgr_path}/frameworks/ddk/usb:usb_ndk",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/bus_extension/core:driver_extension_bus_core",
    "${ext_mgr_path}/services/native/driver_extension_manager/src/drivers_hisysevent:report_sys_event",
  ]
  defines = []
  if (extdevmgr_usb_pass_through) {
    defines += [ " EXTDEVMGR_USB_PASS_THROUGH" ]
  }
  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "drivers_interface_usb:libusb_ddk_proxy_1.1",
    "hilog:libhilog",
    "ipc:ipc_core",
    "samgr:samgr_proxy",
  ]
  if (extdevmgr_usb_pass_through) {
    external_deps += [ "drivers_interface_usb:libusb_proxy_2.0" ]
  } else {
    external_deps += [ "drivers_interface_usb:libusb_proxy_1.0" ]
  }
  cflags_cc = [
    "-fno-asynchronous-unwind-tables",
    "-fno-unwind-tables",
    "-Os",
  ]

  install_enable = true
  subsystem_name = "hdf"
  part_name = "external_device_manager"
}
